@@ -18,6 +18,7 @@ import java.io.IOException;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.rao_result_json.RaoResultJsonConstants.*;
 
@@ -33,7 +34,7 @@ final class NetworkActionResultArraySerializer {
 
         List<NetworkAction> sortedListOfNetworkActions = crac.getNetworkActions().stream()
             .sorted(Comparator.comparing(NetworkAction::getId))
-            .toList();
+            .collect(Collectors.toList());
 
         jsonGenerator.writeArrayFieldStart(NETWORKACTION_RESULTS);
         for (NetworkAction networkAction : sortedListOfNetworkActions) {
@@ -47,7 +48,7 @@ final class NetworkActionResultArraySerializer {
         List<State> statesWhenNetworkActionIsActivated = crac.getStates().stream()
                 .filter(state -> safeIsActivatedDuringState(raoResult, state, networkAction))
                 .sorted(STATE_COMPARATOR)
-                .toList();
+                .collect(Collectors.toList());
 
         if (statesWhenNetworkActionIsActivated.isEmpty()) {
             return;
@@ -56,7 +57,7 @@ final class NetworkActionResultArraySerializer {
         jsonGenerator.writeStartObject();
         jsonGenerator.writeStringField(NETWORKACTION_ID, networkAction.getId());
         jsonGenerator.writeArrayFieldStart(STATES_ACTIVATED);
-        for (State state : statesWhenNetworkActionIsActivated) {
+        for (State state: statesWhenNetworkActionIsActivated) {
             jsonGenerator.writeStartObject();
             jsonGenerator.writeStringField(INSTANT, serializeInstantId(state.getInstant()));
             Optional<Contingency> optContingency = state.getContingency();
