@@ -18,6 +18,7 @@ import com.fasterxml.jackson.core.JsonGenerator;
 import java.io.IOException;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.rao_result_json.RaoResultJsonConstants.*;
 
@@ -33,7 +34,7 @@ final class VoltageCnecResultArraySerializer {
 
         List<VoltageCnec> sortedListOfVoltageCnecs = crac.getVoltageCnecs().stream()
             .sorted(Comparator.comparing(VoltageCnec::getId))
-            .toList();
+            .collect(Collectors.toList());
 
         jsonGenerator.writeArrayFieldStart(VOLTAGECNEC_RESULTS);
         for (VoltageCnec voltageCnec : sortedListOfVoltageCnecs) {
